--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         camera.updateProjectionMatrix();
       }, false );
       
-      var light=new THREE.DirectionalLight(0xccccc);
+      var light=new THREE.DirectionalLight(0xcccccc);
       light.position.set(0,100,30);
       scene.add(light);
       scene.add(new THREE.AmbientLight(0x666666);
