--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>はじめて</title>
   <style>
-    body{margin: 0;}
-    canvas{widht: 100%; height: 100%}
+    body{ margin: 0; }
+    canvas{ widht: 100%; height: 100% }
   </style>
   </head>
   <body>
@@ -21,11 +21,11 @@
       //リサイズへの対応
       window.addEventListener('resize',function(){
         renderer.setSize(window.innerWidth, window.innerHeight);
-        camera.aspect=window.innerWidht/window.innerHeight;
+        camera.aspect=window.innerWidhth / window.innerHeight;
         camera.updateProjectionMatrix();
       }, false );
       
-      var geometry = new THREE.BoxGeometry( 1, 1, 1);
+      var geometry = new THREE.BoxGeometry( 1, 1, 1 );
       ver material = new THREE.MeshBasicMaterial({color: 0xccffcc});
       var mesh = new THREE.Mesh( geometry, material );
       scene.add( mash );
