--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }, false );
       
       var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-      ver material = new THREE.MeshBasicMaterial({color: 0xffcccc});
+      var material = new THREE.MeshBasicMaterial({color: 0xccffcc});
       var mesh = new THREE.Mesh( geometry, material );
       scene.add( mesh );
     
