--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         mesh.rotation.y += 0.3*delta_time;
         
         renderer.render( scene, camera);
-        
+      };
+      render();
     </script>
   </body>
 </html>
