--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       var loader = new THREE.TextureLoader();
       var geometry = new THREE.SphereGeometry( 1, 32, 16 );
       var material = new THREE.MeshStandardMaterial ({
-        color: 0xccffcc
+        color: 0xccffcc,
         map: loader.load('earthmap.jpg')});
       var mesh = new THREE.Mesh( geometry, material );
       scene.add( mesh );
