--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       var numParticles = 2000;
       for(var i = 0 ; i< numParticles ; i++)
       {
-        particke_geometry.vertices.push(
+        particle_geometry.vertices.push(
           new THREE.Vector3(
             Mash.random()*20-10,
             Mash.random()*20-10,
