--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       {
         particle_geometry.vertices.push(
           new THREE.Vector3(
-            Mash.random()*20-10,
-            Mash.random()*20-10,
-            Mash.random()*20-10));
+            Math.random()*20-10,
+            Math.random()*20-10,
+            Math.random()*20-10));
       }
       
       var particle_material = new THREE.PointsMaterial({
